# sai

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
.github/workflows/: linux.yml  macos.yml  windows.yml
scripts/: package-arch.sh  tui_smoke.py
src/: alarm.rs  cli.rs  config.rs  config_tui.rs  i18n.rs  main.rs  paths.rs  perf_trace.rs  prompts.rs  question_tui.rs  reply_notify.rs  runtime_cwd.rs  token_counter.rs  token_estimate.rs  usage_history.rs
src/agent/: compaction.rs  compaction_model.rs  context_projection.rs  conversation.rs  event.rs  external_events.rs  goal_events.rs  instruction_files.rs  lifecycle.rs  load_request.rs  message_context.rs  mod.rs  mode.rs  model_context.rs  recovery.rs  subagent_completion.rs  system_prompt.rs  tool_attachments.rs  tool_history.rs  tool_visibility.rs  tool_visibility_batch_tests.rs  turn_orchestration.rs
src/assistants/: commit_message.rs  mod.rs  session_title.rs
src/cli/: agent_select.rs  alarm_worker.rs  args.rs  background_commands.rs  chat.rs  compaction.rs  composer_tips.rs  config_commands.rs  fuzzy_select.rs  history.rs  init.rs  input_flags.rs  kb_commands.rs  keyboard_enhancement.rs  localization.rs  memory_commands.rs  message.rs  model_select.rs  permission_prompt.rs  providers.rs  render_options.rs  repl.rs  repl_background.rs  repl_chrome.rs  repl_clipboard.rs  repl_commands.rs  repl_editor.rs  repl_external_events.rs  repl_input.rs  repl_input_navigation.rs  repl_input_render.rs  repl_input_tests.rs  repl_pager.rs  repl_shell.rs  repl_text.rs  repl_tool_warmup.rs  repl_turn.rs  reset.rs  sessions.rs  skills_commands.rs
src/clipboard/: mod.rs  payload.rs  prompt.rs  reader.rs
src/config/: agent_presets.rs  agents.rs  app.rs  app_prompts.rs  app_validation.rs  defaults.rs  gateway_defaults.rs  git.rs  mcp_file.rs  model.rs  model_metadata.rs  model_units.rs  notification.rs  paths.rs  permission.rs  provider.rs  secrets.rs  session.rs  tests.rs
src/config_tui/: agents.rs  custom_prompts.rs  form.rs  gateways.rs  input.rs  knowledge.rs  model_metadata_form.rs  plugin_fields.rs  plugin_fields_tests.rs  plugins.rs  provider_fetch.rs  provider_forms.rs  providers.rs  session.rs  settings.rs  ui.rs
src/control_commands/: agent.rs  catalog.rs  goal.rs  help.rs  mod.rs  model.rs  parser.rs  reset.rs  session.rs
src/cron/: gateway_job.rs  mod.rs  repository.rs  scheduler.rs  tool.rs
src/gateways/: channel_context.rs  channel_tools.rs  cli.rs  manager.rs  mod.rs  (+13 more)
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+986 files in other folders)
